<resources>
    <string name="app_name">Companies Info</string>

    <string name="main_menu_title_companies_list">Companies</string>
    <string name="main_menu_title_more">More</string>
    <string name="main_menu_title_settings">Settings</string>

    <string name="fragment_companies_title">Companies</string>

    <string name="fragment_company_info_title">Company Details</string>
    <string name="fragment_company_info_phone">Phone:</string>
    <string name="fragment_company_info_web" translatable="false">www:</string>
    <string name="fragment_company_info_map">Open on map</string>

    <string name="fragment_more_title">More</string>
    <string name="fragment_settings_title">Settings</string>

    <string name="companies_synchronize">Synchronize</string>

    <string name="root_sync_message_error">Sync error</string>
</resources>
